keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: keycloak-volume
          hostPath:
            path: /data/keycloak
      containers:
        - name: keycloak
          image: keycloak/keycloak:13.0.1
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /opt/jboss/keycloak/standalone/data
              name: keycloak-volume
          ports:
            - containerPort: 8443
