keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: https
      port: 8443
      protocol: TCP
